Minor alignment fixes

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ a:hover {
 #main-page-list {
     display: flex;
     flex-wrap: wrap;
-    
+    justify-content: space-evenly;
 }
 
 .main-list-items {
@@ -163,17 +163,13 @@ a:hover {
         margin-bottom: 15px;
     }
 
-    h3 {
-        margin-left: 70px;
-    }
-
     ul {
         padding-right: 80px;
     }
 
     li {
         margin: 0px 0px 15px 45px;
-        padding-right: 10%;
+        padding-right: 15%;
     }
 
 
@@ -198,7 +194,7 @@ a:hover {
     .main-list-items {
         display: flex;
         flex-direction: column;
-        margin: 30px auto 30px auto;
+        margin: 30px 20px 30px 20px;
     }
 	
 	.food-main-image {
